tests/baselines/reference/requiredMappedTypeModifierTrumpsVariance.errors.txt
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(5,1): error TS2741: Property 'a' is missing in type 'Required<{ b?: 1; x: 1; }>' but required in type 'Required<{ a?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(6,1): error TS2741: Property 'b' is missing in type 'Required<{ a?: 1; x: 1; }>' but required in type 'Required<{ b?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(8,3): error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(9,3): error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(18,1): error TS2322: Type 'Foo<{ b?: 1; x: 1; }>' is not assignable to type 'Foo<{ a?: 1; x: 1; }>'.
  Types of property 'a' are incompatible.
    Property 'a' is missing in type 'Required<{ b?: 1; x: 1; }>' but required in type 'Required<{ a?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(19,1): error TS2322: Type 'Foo<{ a?: 1; x: 1; }>' is not assignable to type 'Foo<{ b?: 1; x: 1; }>'.
  Types of property 'a' are incompatible.
    Property 'b' is missing in type 'Required<{ a?: 1; x: 1; }>' but required in type 'Required<{ b?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(21,6): error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts(22,6): error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.


==== tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts (8 errors) ====
    const a: Required<{ a?: 1; x: 1 }> = { a: 1, x: 1 };
    const b: Required<{ b?: 1; x: 1 }> = { b: 1, x: 1 };
    export let A = a;
    export let B = b;
    A = b; // Should Error
    ~
!!! error TS2741: Property 'a' is missing in type '{|Required|0|}<{ {|b|1|}?: 1; {|x|2|}: 1; }>' but required in type '{|Required|3|}<{ {|a|4|}?: 1; {|x|5|}: 1; }>'.
!!! related TS2728 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:1:21: 'a' is declared here.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 1 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:2:21
!!! annotated symbol 2 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:2:28
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 4 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:1:21
!!! annotated symbol 5 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:1:28
    B = a; // Should Error
    ~
!!! error TS2741: Property 'b' is missing in type '{|Required|0|}<{ {|a|1|}?: 1; {|x|2|}: 1; }>' but required in type '{|Required|3|}<{ {|b|4|}?: 1; {|x|5|}: 1; }>'.
!!! related TS2728 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:2:21: 'b' is declared here.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 1 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:1:21
!!! annotated symbol 2 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:1:28
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 4 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:2:21
!!! annotated symbol 5 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:2:28
    
    a.b; // Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
      ~
!!! error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
    b.a; // Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
      ~
!!! error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
    
    interface Foo<T> {
        a: Required<T>;
    }
    const aa: Foo<{ a?: 1; x: 1 }> = { a: { a: 1, x: 1 } };
    const bb: Foo<{ b?: 1; x: 1 }> = { a: { b: 1, x: 1 } };
    export let AA = aa;
    export let BB = bb;
    AA = bb; // Should Error
    ~~
!!! error TS2322: Type '{|Foo|0|}<{ {|b|1|}?: 1; {|x|2|}: 1; }>' is not assignable to type '{|Foo|3|}<{ {|a|4|}?: 1; {|x|5|}: 1; }>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Property 'a' is missing in type '{|Required|6|}<{ {|b|7|}?: 1; {|x|8|}: 1; }>' but required in type '{|Required|9|}<{ {|a|10|}?: 1; {|x|11|}: 1; }>'.
!!! related TS2728 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:17: 'a' is declared here.
!!! annotated symbol 0 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:11:11
!!! annotated symbol 1 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:17
!!! annotated symbol 2 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:24
!!! annotated symbol 3 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:11:11
!!! annotated symbol 4 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:17
!!! annotated symbol 5 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:24
!!! annotated symbol 6 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 7 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:17
!!! annotated symbol 8 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:24
!!! annotated symbol 9 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 10 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:17
!!! annotated symbol 11 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:24
    BB = aa; // Should Error
    ~~
!!! error TS2322: Type '{|Foo|0|}<{ {|a|1|}?: 1; {|x|2|}: 1; }>' is not assignable to type '{|Foo|3|}<{ {|b|4|}?: 1; {|x|5|}: 1; }>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Property 'b' is missing in type '{|Required|6|}<{ {|a|7|}?: 1; {|x|8|}: 1; }>' but required in type '{|Required|9|}<{ {|b|10|}?: 1; {|x|11|}: 1; }>'.
!!! related TS2728 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:17: 'b' is declared here.
!!! annotated symbol 0 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:11:11
!!! annotated symbol 1 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:17
!!! annotated symbol 2 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:24
!!! annotated symbol 3 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:11:11
!!! annotated symbol 4 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:17
!!! annotated symbol 5 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:24
!!! annotated symbol 6 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 7 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:17
!!! annotated symbol 8 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:14:24
!!! annotated symbol 9 /.ts/lib.es5.d.ts:1431:6
!!! annotated symbol 10 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:17
!!! annotated symbol 11 tests/cases/compiler/requiredMappedTypeModifierTrumpsVariance.ts:15:24
    
    aa.a.b; // Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
         ~
!!! error TS2339: Property 'b' does not exist on type 'Required<{ a?: 1; x: 1; }>'.
    bb.a.a; // Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.
         ~
!!! error TS2339: Property 'a' does not exist on type 'Required<{ b?: 1; x: 1; }>'.